--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iterator.one</title>
+    <style>
+      body {
+        background: rgb(253,217,0);
+        background: linear-gradient(90deg, rgba(253,217,0,1) 0%, rgba(255,221,35,1) 50%, rgba(254,212,3,1) 100%);
+      }
+    </style>
   </head>
-  <body style="background: linear-gradient(90deg, rgba(254, 231, 93, 1) 0%, rgba(254, 213, 1, 1) 100%);">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
