--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ai enumeration to the end of the iterator." />
+    <meta name="keywords" content="iterator.one, iterator, enumeration, ai, artificial intelligence" />
+    <meta name="author" content="RGBKnights" />
+    <meta property="og:title" content="Iterator.one" />
+    <meta property="og:description" content="Ai enumeration to the end of the iterator." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://iterator.one/" />
+    <meta property="og:image" content="https://iterator.one/logo-black.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Iterator.one" />
+    <meta name="twitter:description" content="Iterator.one - Empowering development with cutting-edge solutions." />
+    <meta name="twitter:image" content="https://iterator.one/logo-black.png" />
+    <link rel="canonical" href="https://iterator.one/" />
+    <link rel="icon" type="image/svg+xml" href="/logo-black.png" />
+    <link rel="apple-touch-icon" href="/logo-black.png" />
     <title>Iterator.one</title>
   </head>
   <body>
