example vs icon

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:description" content="Ai enumeration to the end of the iterator." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://iterator.one/" />
-    <meta property="og:image" content="https://iterator.one/logo-black.png" />
+    <meta property="og:image" content="https://iterator.one/example.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Iterator.one" />
-    <meta name="twitter:description" content="Iterator.one - Empowering development with cutting-edge solutions." />
-    <meta name="twitter:image" content="https://iterator.one/logo-black.png" />
+    <meta name="twitter:description" content="Ai enumeration to the end of the iterator." />
+    <meta name="twitter:image" content="https://iterator.one/example.png" />
     <link rel="canonical" href="https://iterator.one/" />
     <link rel="icon" type="image/svg+xml" href="/logo-black.png" />
     <link rel="apple-touch-icon" href="/logo-black.png" />
