multiple phases: Extract, Enumerate, Evaluate

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="canonical" href="https://iterator.one/" />
     <link rel="icon" type="image/svg+xml" href="/logo-black.png" />
     <link rel="apple-touch-icon" href="/logo-black.png" />
+    <link rel="preload" href="/background.0.png" as="image">
+    <link rel="preload" href="/background.1.png" as="image">
+    <link rel="preload" href="/background.2.png" as="image">
     <title>Iterator.one</title>
   </head>
   <body>
