working on Layout and Views

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="apple-touch-icon" href="/logo-black.png" />
     <link rel="preload" href="/background.0.png" as="image">
     <link rel="preload" href="/background.1.png" as="image">
+    <link rel="preload" href="/background.2.png" as="image">
+    <link rel="preload" href="/background.3.png" as="image">
+    <link rel="preload" href="/background.4.png" as="image">
     <link rel="preload" href="/logo-white.png" as="image">
     <title>Iterator.one</title>
   </head>
